--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.0.1",
     "graphql-tag": "^2.11.0",
     "highlight.js": "^11.5.0",
+    "jwt-decode": "^4.0.0",
     "mark.js": "^8.11.1",
     "mergeby": "^2.0.1",
     "pretty-bytes": "^5.6.0",
